--- a/client/src/assets/templates/navigation/mainNav.jade
+++ b/client/src/assets/templates/navigation/mainNav.jade
@@ -1,25 +1,13 @@
 extends ./navbar
 
 block links
-    li.waves-effect.waves-light.hide-on-med-and-down
+    li.waves-effect.waves-light
         a(href='#') Map
-    li.waves-effect.waves-light.hide-on-med-and-down
+    li.waves-effect.waves-light
         a(href='#') Upload
-    li.waves-effect.waves-light.hide-on-med-and-down
+    li.waves-effect.waves-light
         a(href='/account') Account
-    li.waves-effect.waves-light.hide-on-med-and-down
+    li.waves-effect.waves-light
         a(href='/account/signin') Sign in
-    li.waves-effect.waves-light.hide-on-med-and-down
+    li.waves-effect.waves-light
         a(href='/account/signup') Sign up
-    li.waves-effect.waves-light.hide-on-large-only
-        a(href='#')
-            i.mdi-maps-place.left
-            | Map
-    li.waves-effect.waves-light.hide-on-large-only
-        a(href='#')
-            i.mdi-file-file-upload.left
-            | Upload
-    li.waves-effect.waves-light.hide-on-large-only
-        a(href='#')
-            i.mdi-social-person.left
-            | Account
