--- a/client/src/assets/templates/navigation/mainNav.jade
+++ b/client/src/assets/templates/navigation/mainNav.jade
@@ -2,9 +2,7 @@ extends ./navbar
 
 block links
     li.waves-effect.waves-light
-        a(href='#') Map
-    li.waves-effect.waves-light
-        a(href='#') Upload
+        a(href='/upload') Upload
     li.waves-effect.waves-light
         a(href='/account') Account
     li.waves-effect.waves-light
