--- a/client/src/assets/templates/account/profile.jade
+++ b/client/src/assets/templates/account/profile.jade
@@ -31,3 +31,6 @@ block content
                                 span.badge
                                     | 176
                                     i.mdi-image-collections.right
+
+block scripts
+    script(src='../../assets/scripts/profile.js')
