--- a/client/src/assets/templates/navigation/mainNav.jade
+++ b/client/src/assets/templates/navigation/mainNav.jade
@@ -4,8 +4,6 @@ block links
     li.waves-effect.waves-light
         a(href='/upload') Upload
     li.waves-effect.waves-light
-        a(href='/account') Account
+        a(href='/profile') Profile
     li.waves-effect.waves-light
-        a(href='/account/signin') Sign in
-    li.waves-effect.waves-light
-        a(href='/account/signup') Sign up
+        a(href='/auth/facebook') Login with facebook
