--- a/client/src/assets/templates/layout.jade
+++ b/client/src/assets/templates/layout.jade
@@ -15,7 +15,7 @@ html
         block stylesheets
     body
         header
-            include ../navigation/navbar
+            include ./navigation/navbar
 
         block content
 
