--- a/client/src/assets/templates/account/profile.jade
+++ b/client/src/assets/templates/account/profile.jade
@@ -7,26 +7,7 @@ block content
     section.section.no-pad-bot
         .row
             .col.l2.s12
-                .card
-                    .card-image
-                        img.responsive-img(src='../../assets/images/profileExamle.jpg')
-                    .card-content
-                        ul.collection
-                            a.collection-item.waves-effect.waves-light-green-lighten-1
-                                | Egor
-                                span.badge
-                                    | share
-                                    i.mdi-social-share.right
-                            a.collection-item.waves-effect.waves-light-green-lighten-1
-                                | Likes
-                                span.badge
-                                    | 43
-                                    i.mdi-action-favorite.right
-                            a.collection-item.waves-effect.waves-light-green-lighten-1
-                                | Photos
-                                span.badge
-                                    | 176
-                                    i.mdi-image-collections.right
+                #card_container
 
 block scripts
     script(src='../../assets/scripts/profile.js')
