--- a/client/src/assets/templates/account/profile.jade
+++ b/client/src/assets/templates/account/profile.jade
@@ -6,8 +6,8 @@ block title
 block content
     section.section.no-pad-bot
         .row
-            .col.l1.s12
-                .card#profile_container
+            .col.l2.s12
+                #profile_container
                     .card-image
                         img.responsive-img(src='../../assets/images/profileExamle.jpg')
                     .card-content
