--- a/client/src/assets/templates/account/profile.jade
+++ b/client/src/assets/templates/account/profile.jade
@@ -5,9 +5,12 @@ block title
 
 block content
     section.section.no-pad-bot
+        br
+        br
         #profile_container
-            .row.valign-wrapper
-                .col.l2.valign
-                    img.circle.responsive-img(src='https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xpf1/v/t1.0-1/10431713_818528254872766_4787171365214585616_n.jpg?oh=4436af4eed82b3c03d720e5694a8d111&oe=55961814&__gda__=1435282306_5df360e159e2b9a83603b2293d5d881f')
+            .container
+                .row.valign-wrapper
+                    .col.l4.valign
+                        img.circle.responsive-img(src='https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xpf1/v/t1.0-1/10431713_818528254872766_4787171365214585616_n.jpg?oh=4436af4eed82b3c03d720e5694a8d111&oe=55961814&__gda__=1435282306_5df360e159e2b9a83603b2293d5d881f')
 block scripts
     script(src='../../assets/scripts/profile.js')
