--- a/client/src/assets/templates/account/profile.jade
+++ b/client/src/assets/templates/account/profile.jade
@@ -3,9 +3,15 @@ extends ../layout
 block title
     title Profile
 
+block stylesheets
+    link(rel='stylesheet', href='../../assets/stylesheets/map.css')
+
 block content
     section.section.no-pad-bot
         br
         #profile_container
+        div(style='padding-left: 20px; padding-right: 20px;')
+            .z-depth-1#map-canvas
 block scripts
+    script(src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDasQqDYAQVPfnB4VDTk490mf-Mz2hi-RY')
     script(src='../../assets/scripts/profile.js')
