--- a/client/src/assets/templates/account/profile.jade
+++ b/client/src/assets/templates/account/profile.jade
@@ -10,7 +10,7 @@ block content
     section.section.no-pad-bot
         br
         #profile_container
-        div(style='padding-left: 20px; padding-right: 20px;')
+        div(style='padding-left: 20px; padding-right: 20px; padding-bottom: 20px;')
             .z-depth-1#map-canvas
 block scripts
     script(src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDasQqDYAQVPfnB4VDTk490mf-Mz2hi-RY')
